--- a/www/index.html
+++ b/www/index.html
@@ -1,87 +1,102 @@
 <!DOCTYPE html>
-<html >
-<head >
-	<meta charset="utf-8" >
-	<meta name="viewport"
-	      content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width" >
-	<title ></title >
+<html>
 
-	<link href="lib/ionic/css/ionic.css"
-	      rel="stylesheet" >
-	<link href="css/style.css"
-	      rel="stylesheet" >
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+	<title></title>
+
+	<link href="lib/ionic/css/ionic.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 	<script src="lib/oauth-signature/dist/oauth-signature.js"></script>
 
-	<!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-	<link href="css/ionic.app.css" rel="stylesheet">
-	-->
-
 	<!-- ionic/angularjs js -->
-	<script src="lib/ionic/js/ionic.bundle.js" ></script >
+	<script src="lib/ionic/js/ionic.bundle.js"></script >
 
 	<!-- cordova script (this will be a 404 during development) -->
 	<script src="lib/ngCordova/dist/ng-cordova.js"></script>
-	<script src="cordova.js" ></script >
+	<script src="cordova.js"></script >
 
-	<!-- your apps js -->
-	<script src="js/app.js" ></script >
-	<script src="js/controllers.js" ></script >
-	<script src="js/services.js" ></script >
-	<script src="js/filters.js" ></script >
-</head >
-<body ng-app="sushiMe" >
+	<!-- apps js, controllers, services-->
+	<script src="js/app.js" ></script>
+	<script src="js/controllers.js"></script>
+	<script src="js/services.js"></script>
+	<script src="js/filters.js"></script>
+</head>
 
-<ion-pane ng-controller="YelpController">
-	<ion-header-bar class="bar-positive" >
-		<h1 class="title" >
-			<img src='img/sushi-icon.png' />
-			<span >SushiMe</span >
-		</h1 >
-	</ion-header-bar >
-	<ion-content >
+<body ng-app="sushiMe">
 
-		<ion-refresher pulling-text="Refreshing..." on-refresh="doRefresh()">
-		</ion-refresher>
+	<ion-pane ng-controller="YelpController">
+		<ion-header-bar class="bar-calm">
+			<img class="logo" src='img/sushi-icon.png' />
+			<h1 class="title">SushiMe</h1>
+			<button class="button icon ion-gear-a"></button>
+		</ion-header-bar>
+		<ion-header-bar class="bar-subheader">
+			<div class="button-bar bar-light" ng-show="!suggestView">
+				<a class="button button-stable" ng-click="propertyName=null; reverse=false">
+					Default
+				</a>
 
-		<ion-list >
-			<ion-item ng-repeat="restaurant in yelp.results"
-			          class="item-thumbnail-left" >
-				<img ng-src="{{loadImage(restaurant.image_url)}}" >
-				<h2 >{{restaurant.name}}</h2 >
+				<a class="button button-stable" ng-click="sortBy('distance')">
+					<i ng-show="propertyName == 'distance' && !reverse" class="ion-arrow-down-b"></i>
+					<i ng-show="propertyName == 'distance' && reverse" class="ion-arrow-up-b"></i> Sort by <i class="ion ion-ios-navigate"></i>
+				</a>
+				<a class="button button-stable" ng-click="sortBy('rating')">
+					<i ng-show="propertyName == 'rating' && !reverse" class="ion-arrow-up-b"></i>
+					<i ng-show="propertyName == 'rating' && reverse" class="ion-arrow-down-b"></i> Sort by <i class="ion ion-star"></i>
+				</a>
+				<a class="button button-balanced" ng-click="suggestView = !suggestView">
+				Suggest!
+				</a>
 
-				<p >
-					<span >
-						<i class="ion ion-ios-navigate" ></i >
-						{{restaurant.distance | number:"0"}}m</span >
-				</p >
-				<p >
-					<i class="ion ion-ios-location" ></i >
-					{{restaurant.location.display_address | join:', ' }}
-				</p >
-				<p >
-					<span >
-						<i class="ion ion-star" ></i >
-						{{restaurant.rating}}</span >
-					<span >
-						<i class="ion ion-person" ></i >
-						{{restaurant.review_count}}</span >
-				</p >
+			</div>
+			<div class="suggestPage">
+				<a class="button ion-chevron-left button-left" ng-show="suggestView" ng-click="suggestView = !suggestView">
+					<span> Back</span>
+				</a>
+				<a class="button button-balanced button-right" ng-show="suggestView">
+			Suggestions Based on Your Preferences
+		</a>
+			</div>
+		</ion-header-bar>
+		<ion-content>
 
-				<ion-option-button class='button-positive'
-					ng-click='getDirections(restaurant)'>
-					<i class='ion ion-map'></i>&nbsp;Map
-				</ion-option-button>
+			<ion-refresher pulling-text="Refreshing..." on-refresh="doRefresh()">
+			</ion-refresher>
 
-			</ion-item >
-		</ion-list >
+			<ion-list ng-show="!suggestView">
+				<ion-item class="card" ng-repeat="restaurant in yelp.results | orderBy: propertyName:reverse" ng-click="showPopUp()">
+					<div class="item item-avatar">
+						<img ng-src="{{loadImage(restaurant.image_url)}}">
+						<h2>{{restaurant.name}}</h2>
+						<p>
+							<i class="ion ion-ios-navigate" ></i>
+							{{restaurant.distance | number:"0"}}m
+							<i class="ion ion-star" ></i>
+							{{restaurant.rating}}</span >
+							<i class="ion ion-person" ></i>
+							{{restaurant.review_count}}</span>
+						</p>
+					</div>
+					<div class="item item-body">
+						<p >
+							<i class="ion ion-ios-location" ></i>
+							{{restaurant.location.display_address | join:', ' }}
+						</p >
+					</div>
 
-		<ion-infinite-scroll 
-			ng-if='yelp.hasMore'
-			immediate-check="false"
-			on-infinite="loadMore()"
-		></ion-infinite-scroll>
+					<ion-option-button class='button-positive' ng-click='getDirections(restaurant)'>
+						<i class='ion ion-map'></i>&nbsp;Go!
+					</ion-option-button>
 
-	</ion-content >
-</ion-pane >
-</body >
-</html >
+				</ion-item>
+			</ion-list>
+
+			<ion-infinite-scroll ng-if='yelp.hasMore' immediate-check="false" on-infinite="loadMore()"></ion-infinite-scroll>
+
+		</ion-content>
+	</ion-pane>
+</body>
+
+</html>
